# tabu

./: README.md  docker-compose.yml
db/docker-entrypoint-initdb.d/: init-user-db.sql
tabu/: Cargo.toml  Dockerfile
tabu/src/: cli.rs  data.rs  db.rs  error.rs  handler.rs  main.rs
