[package]
name = "tabu"
version = "0.1.0"
authors = ["Chun-Kwong Wong <chunkwong.wong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
mobc = "0.5"
mobc-postgres = {version = "0.5", features = ["with-chrono-0_4"]}
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "0.2", features = ["macros"]}
warp = "0.2"
